# RISC-V-Simulator

./: .clangd  .gitignore  CMakeLists.txt
demo/: alu.cpp  modules.cpp
include/: reflect.h  synchronize.h
src/: lsb.cpp  lsb.hpp  main.cpp  memory.cpp  memory.hpp  opcode.hpp  rob.cpp  rob.hpp  rs.cpp  rs.hpp
